--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.15.2", 
     "core-js": "^2.6.5",
     "cube-ui": "~1.12.15",
     "vue": "^2.6.10",
